[package]
name = "address_scanner"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["address", "macros"]

    [workspace.dependencies]
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    thiserror = "1.0"

[dependencies]
address = { path = "./address" }
macros = { path = "./macros" }
thiserror = { workspace = true}
