[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
windows = { version = "0.57.0", features = ["Win32_System_Memory"] }
once_cell = "1.19.0"
address = { path = "../address" }
